Modals: fixed z-index bug & build info

--- a/src/elements/ModalsContainer/ModalsContainer.pcss
+++ b/src/elements/ModalsContainer/ModalsContainer.pcss
@@ -5,7 +5,7 @@
  */
 
 .ModalsContainer {
-  z-index: 200; // Lift ip to top-most level (but below footer which located at 300 z-level).
+  z-index: 300; // Lift ip to top-most level (but below footer which located at 300 z-level).
   position: $modalContainerPosition;
   top: 0;
   bottom: 0;
